kubernetes/manifests/cilium-gateway-system/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-gateway-httproutes-kube-system
  namespace: kube-system
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: cilium-gateway-system
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-gateway-httproutes-authentik
  namespace: authentik
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: cilium-gateway-system
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-gateway-httproutes-audiobook
  namespace: audiobook
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: cilium-gateway-system
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-gateway-httproutes-duplicati
  namespace: duplicati
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: cilium-gateway-system
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-gateway-httproutes-glance
  namespace: glance
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: cilium-gateway-system
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-gateway-httproutes-hass
  namespace: home-assistant
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: cilium-gateway-system
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-gateway-httproutes-immich
  namespace: immich
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: cilium-gateway-system
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-gateway-httproutes-nextcloud
  namespace: nextcloud
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: cilium-gateway-system
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-gateway-httproutes-plex
  namespace: plex
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: cilium-gateway-system
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-gateway-httproutes-flux
  namespace: flux-system
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: cilium-gateway-system
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-gateway-httproutes-collabora
  namespace: collabora
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: cilium-gateway-system
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-gateway-httproutes-vm
  namespace: victoria-metrics
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: cilium-gateway-system
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-gateway-httproutes-adventurelog
  namespace: adventurelog
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: cilium-gateway-system
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-gateway-httproutes-rustfs
  namespace: rustfs
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: cilium-gateway-system
  to:
  - group: ""
    kind: Service
