kubernetes/manifests/cilium-gateway-system/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: cilium-gateway-system
spec:
  gatewayClassName: cilium
  listeners:
  - name: https-glance
    hostname: "start.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: glance-tls
        kind: Secret
        namespace: cilium-gateway-system
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-plex
    hostname: "plex.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: plex-tls
        kind: Secret
        namespace: cilium-gateway-system
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-hubble
    hostname: "hubble.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: hubble-tls
        kind: Secret
        namespace: cilium-gateway-system
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-grafana
    hostname: "grafana.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: grafana-tls
        kind: Secret
        namespace: cilium-gateway-system
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-victoria-logs
    hostname: "logs.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: victoria-logs-tls
        kind: Secret
        namespace: cilium-gateway-system
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-flux
    hostname: "flux.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: flux-tls
        kind: Secret
        namespace: cilium-gateway-system
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-immich
    hostname: "photos.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: immich-tls
        kind: Secret
        namespace: cilium-gateway-system
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-nextcloud
    hostname: "drive.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: nextcloud-tls
        kind: Secret
        namespace: cilium-gateway-system
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-recipes
    hostname: "recipes.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: recipes-tls
        kind: Secret
        namespace: cilium-gateway-system
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-qbittorrent
    hostname: "torrent.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: qbittorrent-tls
        kind: Secret
        namespace: cilium-gateway-system
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-duplicati
    hostname: "backup.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: duplicati-tls
        kind: Secret
        namespace: cilium-gateway-system
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-collabora
    hostname: "docs.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: collabora-tls
        kind: Secret
        namespace: cilium-gateway-system
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-audiobook
    hostname: "bookshelf.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: audiobook-tls
        kind: Secret
        namespace: cilium-gateway-system
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-home-assistant
    hostname: "home.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: home-assistant-tls
        kind: Secret
        namespace: cilium-gateway-system
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-authentik
    hostname: "auth.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: authentik-tls
        kind: Secret
        namespace: cilium-gateway-system
    allowedRoutes:
      namespaces:
        from: Same
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
